[gd_scene load_steps=3 format=3 uid="uid://crk7n0nq1a561"]

[ext_resource type="Theme" uid="uid://bevcrymup4ms1" path="res://Themes/InventorySlot.tres" id="1_46a21"]
[ext_resource type="Script" path="res://Menus/Inventory/inventory_button.gd" id="3_idipx"]

[node name="InventoryButton" type="Button"]
custom_minimum_size = Vector2(10, 10)
theme = ExtResource("1_46a21")
script = ExtResource("3_idipx")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
stretch_mode = 3

[connection signal="focus_entered" from="." to="." method="_on_focus_entered"]
[connection signal="focus_exited" from="." to="." method="_on_focus_exited"]
[connection signal="pressed" from="." to="." method="_on_pressed"]
